# vkb

./: .gitignore  Readme.md
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: lints.yaml  msrv.yaml  tests.yaml
crates/: .copier-answers.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  Readme.md  book.toml
crates/benches/: rev_comp.rs
crates/src/: catalog.rs  cli.rs  db.rs  error.rs  iceberg.rs  lib.rs  main.rs  parser.rs  request.rs
crates/src/catalog/: exploded.rs  unified.rs
crates/src/db/: exploded.rs  unified.rs
crates/src/iceberg/: catalog.rs  spec.rs
crates/src/parser/: csv.rs
crates/tests/: functional.rs  help.rs
crates/tests/data/: variant.csv
crates/website/: SUMMARY.md
doc/: exploded_schema.md  unified_schema.md
