[package]
name    = "vkb"
version = "0.1.0"
authors = [
	"Pierre Marijon <pierre.marijon@genomecad.fr>"
]

description  = "Variant Knowledge Base"
edition      = "2021"
rust-version = "1.81"

homepage      = "https://GenomeCAD.github.io/vkb"
repository    = "https://github.com/GenomeCAD/vkb"
documentation = "https://GenomeCAD.github.io/vkb"

readme       = "Readme.md"
license-file = "LICENSE"


[lib]
name = "vkb"
path = "src/lib.rs"

[[bin]]
name = "vkb"
path = "src/main.rs"


[dependencies]
## CLI management
clap       = { version = "4", features = ["derive"] }

## Error management
thiserror  = { version = "1" }
anyhow     = { version = "1" }

## Logging management
log        = { version = "0.4" }
stderrlog  = { version = "0.6" }


[dev-dependencies]
## Functional test
assert_cmd = { version = "2" }
tempfile   = { version = "3" }

## Benchmark management
criterion  = { version = "0.5" }


[features]
default = []
bench = []


[[bench]]
name              = "rev_comp"
required-features = ["bench"]
harness           = false


[profile.release]
lto             = 'thin'
opt-level       = 3
overflow-checks = false
panic           = 'abort'
incremental     = false


[profile.profiling]
inherits = "release"
debug    = true
