[package]
name    = "vkb"
version = "0.1.0"
authors = [
	"Pierre Marijon <pierre.marijon@genomecad.fr>"
]

description  = "Variant Knowledge Base"
edition      = "2024"
rust-version = "1.85"

homepage      = "https://GenomeCAD.github.io/vkb"
repository    = "https://github.com/GenomeCAD/vkb"
documentation = "https://GenomeCAD.github.io/vkb"

readme       = "Readme.md"
license-file = "LICENSE"


[lib]
name = "vkb"
path = "src/lib.rs"

[[bin]]
name = "vkb"
path = "src/main.rs"
required-features = ["bin"]


[dependencies]
## CLI management
clap       = { version = "4", features = ["derive"], optional = true }

## Error management
thiserror  = { version = "1" }
anyhow     = { version = "1" }

## Logging management
log        = { version = "0.4" }
stderrlog  = { version = "0.6" }

## stdio management
niffler             = { version = "3", default-features = false, features = [] }
async-compression   = { version = "0.4", features = ["tokio", "gzip"] }

## Iceberg management
arrow-array         = { version = "56" }
arrow-csv           = { version = "56" }
arrow-schema        = { version = "56" }
iceberg-rust        = { git = "https://github.com/JanKaul/iceberg-rust.git" }
iceberg-sql-catalog = { git = "https://github.com/JanKaul/iceberg-rust.git" }
sqlx                = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

## Multithreading management
tokio               = { version = "1", features = ["rt-multi-thread"] }
futures             = { version = "0.3" }

## Other
itertools           = { version = "0.14" }
strum               = { version = "0.27", features = ["derive"] }
constcat            = { version = "0.6" }
derive_builder      = { version = "0.20" }

[dev-dependencies]
## Functional test
assert_cmd = { version = "2" }
tempfile   = { version = "3" }

## Benchmark management
criterion  = { version = "0.5" }


[features]
default = []
bin = ["dep:clap"]

[profile.release]
lto             = 'thin'
opt-level       = 3
overflow-checks = false
panic           = 'abort'
incremental     = false


[profile.profiling]
inherits = "release"
debug    = true
